--- a/backend/hotel/pom.xml
+++ b/backend/hotel/pom.xml
@@ -57,6 +57,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.8.0</version>
+    			<configuration>
+        			<source>13</source>
+        			<target>13</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
