--- a/backend/hotel/pom.xml
+++ b/backend/hotel/pom.xml
@@ -19,12 +19,7 @@
 	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
-		<dependency>
-    		<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-compiler-plugin</artifactId>
-    		<version>3.8.1</version>
-		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
@@ -65,8 +60,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-compiler-plugin</artifactId>
+    			<version>3.8.0</version>
+    			<configuration>
+        			<source>13</source>
+        			<target>13</target>
+    				</configuration>	
+			</plugin>
 		</plugins>
 		
 	</build>
-
+	
 </project>
