--- a/backend/hotel/pom.xml
+++ b/backend/hotel/pom.xml
@@ -19,6 +19,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-webmvc</artifactId>
+    		<version>5.3.13</version>
+		</dependency>
+		<dependency>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-compiler-plugin</artifactId>
   			<version>3.8.1</version>
@@ -60,6 +65,7 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -67,7 +73,7 @@
 			<!-- <plugin>
     			<groupId>org.apache.maven.plugins</groupId>
     			<artifactId>maven-compiler-plugin</artifactId>
-    			<version>3.8.0</version>
+    			<version>3.8.1</version>
     			<configuration>
         			<source>13</source>
         			<target>13</target>
