--- a/backend/hotel/pom.xml
+++ b/backend/hotel/pom.xml
@@ -88,8 +88,13 @@
         			<target>1.7</target>
     			</configuration>
 			</plugin>
+			<plugin>
+          		<groupId>org.apache.maven.plugins</groupId>
+          		<artifactId>maven-surefire-plugin</artifactId>
+          		<version>2.19.1</version>
+        	</plugin>
+			
 		</plugins>
-		
 	</build>
 
 </project>
