--- a/backend/hotel/Procfile
+++ b/backend/hotel/Procfile
@@ -1,1 +1,1 @@
-web: java -Dserver.port=$PORT -jar target/hotel-0.0.1-SNAPSHOT.war
+web: java -Dserver.port=$PORT -jar Software-Engineering-Hotel-Chain.jar
