--- a/backend/hotel/Procfile
+++ b/backend/hotel/Procfile
@@ -1,1 +1,1 @@
-web: java -Dserver.port=$PORT -jar "backend/hotel/target/Software-Engineering-Hotel-Chain.jar"
+web: java $JAVA_OPTS -jar target/dependency/webapp-runner.jar --port $PORT target/hotel-0.0.1-SNAPSHOT.war
